--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Webpage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
+</head>
+<body>
+	<input type="text" id="search-bar" placeholder="Search...">
+	<br><br>
+	<div class="image-button-container">
+
+
+
+		<button class="image-button">
+			<img src="https://via.placeholder.com/200x200.png?text=Image+1" alt="Image 1">
+			<p>Image 1 caption</p>
+		</button>
+		<button class="image-button">
+			<img src="https://via.placeholder.com/200x200.png?text=Image+2" alt="Image 2">
+			<p>Image 2 caption</p>
+		</button>
+		<button class="image-button">
+			<img src="https://via.placeholder.com/200x200.png?text=Image+3" alt="Image 3">
+			<p>Image 3 caption</p>
+		</button>
+	</div>
+</body>
+</html>
