--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 	<input type="text" id="search-bar" placeholder="Search...">
 	<br><br>
 	<div class="image-button-container">
-
-
-
-		<button class="image-button">
-			<img src="https://via.placeholder.com/200x200.png?text=Image+1" alt="Image 1">
-			<p>Image 1 caption</p>
-		</button>
-		<button class="image-button">
-			<img src="https://via.placeholder.com/200x200.png?text=Image+2" alt="Image 2">
-			<p>Image 2 caption</p>
-		</button>
-		<button class="image-button">
-			<img src="https://via.placeholder.com/200x200.png?text=Image+3" alt="Image 3">
-			<p>Image 3 caption</p>
-		</button>
+		<a href="https://www.example.com/image1">
+			<button class="image-button">
+				<img src="https://via.placeholder.com/200x200.png?text=Image+1" alt="Image 1">
+				<p>Image 1 caption</p>
+			</button>
+		</a>
+		<a href="https://www.example.com/image2">
+			<button class="image-button">
+				<img src="https://via.placeholder.com/200x200.png?text=Image+2" alt="Image 2">
+				<p>Image 2 caption</p>
+			</button>
+		</a>
+		<a href="https://www.example.com/image3">
+			<button class="image-button">
+				<img src="https://via.placeholder.com/200x200.png?text=Image+3" alt="Image 3">
+				<p>Image 3 caption</p>
+			</button>
+		</a>
 	</div>
 </body>
 </html>
