--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="image-button-container">
 		<a href="https://www.example.com/image1">
 			<button class="image-button">
-				<img src="https://via.placeholder.com/200x200.png?text=Image+1" alt="Image 1">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/roblox/index.html" alt="Image 1">
 				<p>Image 1 caption</p>
 			</button>
 		</a>
