--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<br><br>
 	<div class="image-button-container">
 
-		<a href="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/index.html">
+		<a href="fun/monkeymart.html">
 			<button class="image-button">
-				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Image 1">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
 				<p>Monkey Mart</p>
 			</button>
 		</a>
