--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<br><br>
 	<div class="image-button-container">
 
-		<a href="fun/monkeymart.html">
+		<a href="fun/monkeymart">
 			<button class="image-button">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
 				<p>Monkey Mart</p>
