--- a/fun/monkeymart.html
+++ b/fun/monkeymart.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Fun | Monkey Mart</title>
+</head>
+<body>
     <frameset rows="100%,*">
         <frame src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/index.html">
         <noframes>
@@ -6,3 +12,5 @@
             </body>
         </noframes>
     </frameset>
+</body>
+</html>
