--- a/fun/monkeymart.html
+++ b/fun/monkeymart.html
@@ -4,13 +4,6 @@
 	<title>Fun | Monkey Mart</title>
 </head>
 <body>
-    <frameset rows="100%,*">
-        <frame src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/index.html">
-        <noframes>
-            <body>
-                Your browser does not support frames. To wiew this page please use supporting browsers.
-            </body>
-        </noframes>
-    </frameset>
+	<iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/index.html" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
 </body>
 </html>
