--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 	<input type="text" id="search-bar" placeholder="Search...">
 	<br><br>
 	<div class="image-button-container">
-
 		<a href="fun/monkeymart">
 			<button class="image-button">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
 				<p>Monkey Mart</p>
 			</button>
 		</a>
-
 	</div>
+	<footer>
+		<p>&copy; 2023 Fun Company. All rights reserved.</p>
+	</footer>
 </body>
 </html>
