--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 	</div>
 	<footer>
-		<p>&copy; 2023 Fun Company. All rights reserved.</p>
+		<p>All games are from 3kh0 but i made everything else.</p>
 	</footer>
 </body>
 </html>
