--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 	</div>
 	<footer>
-		<p>All games are from 3kh0 but i made everything else.</p>
+		<p>All games are from <a href="https://github.com/3kh0">3kh0</a> but I made everything else.</p>
 	</footer>
 </body>
 </html>
