--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+	<div class="description">
+		<p>Welcome to some random game site! Here you can find a variety of fun games to play. Scroll down to see all the games we have to offer.</p>
+	</div>
+
 	<input type="text" id="search-bar" placeholder="Search...">
 	<br><br>
-	<div class="image-button-container">
-		<a href="fun/monkeymart">
-			<button class="image-button">
+
+	<div class="games">
+		<div class="game">
+			<a href="fun/monkeymart">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
 				<p>Monkey Mart</p>
-			</button>
-		</a>
+			</a>
+		</div>
+
+		<div class="game">
+			<a href="fun/game2">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/Game2/bg_loading.png" alt="Game 2 Image">
+				<p>Game 2</p>
+			</a>
+		</div>
+
+		<!-- add more games here... -->
+
 	</div>
+
 	<footer>
 		<p>All games are from <a href="https://github.com/3kh0">3kh0</a> but I made everything else.</p>
 	</footer>
+
 </body>
 </html>
