--- a/index.html
+++ b/index.html
@@ -37,6 +37,35 @@
 			</button>
 		</a>
 	</div>
+
+	<div class="image-button-container">
+		<a href="fun/ctr">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/ctr/logo.png" alt="Cut The Rope Image">
+				<p>Cut The Rope</p>
+			</button>
+		</a>
+	</div>
+
+	<div class="image-button-container">
+		<a href="fun/ctr-tr">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/ctr-tr/logo.png" alt="Cut The Rope: Time Travel Image">
+				<p>Cut The Rope: Time Travel</p>
+			</button>
+		</a>
+	</div>
+
+	<div class="image-button-container">
+		<a href="fun/ctr-holiday">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/ctr-holiday/Holiday_Gift.webp" alt="Cut The Rope: Holiday Image">
+				<p>Cut The Rope: Holiday</p>
+			</button>
+		</a>
+	</div>
+
+
 	<p>All games are from <a href="https://github.com/3kh0">3kh0</a> but I made everything else.</p>
 </body>
 </html>
