--- a/fun/subway-surfers.html
+++ b/fun/subway-surfers.html
@@ -19,6 +19,6 @@
 	</style>
 </head>
 <body>
-	<iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/subway-surfers/unity.js" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
+	<iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/subway-surfers/index.html" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
 </body>
 </html>
