--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 	<br><br>
 	<input type="text" id="search-bar" placeholder="Search...">
 	<br><br>
+
 	<div class="image-button-container">
-		<a href="fun/monkeymart">
+		<a href="fun/ctr-tr">
 			<button class="image-button">
-				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
-				<p>Monkey Mart</p>
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/cookie-clicker/goldCookie.png" alt="Cookie Clicker Image">
+				<p>Cookie Clicker</p>
 			</button>
 		</a>
 	</div>
@@ -50,6 +51,23 @@
 		</a>
 	</div>
 
+	<div class="image-button-container">
+		<a href="fun/monkeymart">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/MonkeyMart/bg_loading.png" alt="Monkey Mart Image">
+				<p>Monkey Mart</p>
+			</button>
+		</a>
+	</div>
+
+	<div class="image-button-container">
+		<a href="fun/subway-surfers">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/subway-surfers/img/splash.jpg" alt="Subway Surfers Image">
+				<p>Subway Surfers</p>
+			</button>
+		</a>
+	</div>
 
 	<p>All games are from <a href="https://github.com/3kh0">3kh0</a> but I made everything else.</p>
 </body>
