--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 	<br><br>
 
 	<div class="image-button-container">
-		<a href="fun/ctr-tr">
+		<a href="fun/99balls">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/99balls/99-balls-evo.jpg" alt="99Balls Image">
+				<p>99balls</p>
+			</button>
+		</a>
+	</div>
+
+	<div class="image-button-container">
+		<a href="fun/cookie-clicker">
 			<button class="image-button">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/cookie-clicker/goldCookie.png" alt="Cookie Clicker Image">
 				<p>Cookie Clicker</p>
