--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 	<div class="image-button-container">
 
 
+		<a href="fun/1v1lol">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/1v1lol/splash.png" alt="1v1.lol Image">
+				<p>1v1.lol</p>
+			</button>
+		</a>
+
 		<a href="fun/99balls">
 			<button class="image-button">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/99balls/99-balls-evo.jpg" alt="99Balls Image">
