--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 			</button>
 		</a>
 
+		<a href="fun/baldisbasics">
+			<button class="image-button">
+				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/cookie-clicker/goldCookie.png" alt="Cookie Clicker Image">
+				<p>Baldi's Basics</p>
+			</button>
+		</a>
+
 		<a href="fun/cookie-clicker">
 			<button class="image-button">
 				<img src="https://raw.githack.com/3kh0/3kh0-assets/main/cookie-clicker/goldCookie.png" alt="Cookie Clicker Image">
